--- a/main.css
+++ b/main.css
@@ -1,25 +1,220 @@
 /* Import Google Fonts */
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lumanosimo:400,700&display=swap');
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Lumanosimo', sans-serif;
+  background-color: #4e54c8;
+}
+
+.wrap {
+  padding: 10px 10px;
+  border: 2px solid #470F48;
+  border-radius: 25px;
+}
+
+/* .wrap img {
+  height: 100%;
+  width: 100%;
+} */
+
+img {
+  width:  100%;
+  height: 200px;
+  background-size: cover;
+}
+
+.tools {
+  background-color: #a415a7;
+  padding: 30px 50px;
+  color: white;
+  cursor: pointer;
+}
+
+.tools:hover {
+  background-color: #6f1670;
+  transition-duration: 1000ms;
+  transition-property: background;
+}
+
+/* Animation*/
+.head-anim {
+  animation: bounce; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2.5s; /* don't forget to set a duration! */
+  padding-left: 300px !important;
+  padding-right: 300px !important;
+}
+
+.play-anim {
+  animation: bounce; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
+}
+
+.area{
+  background: #4e54c8;  
+  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+  width: 100%;
+  height:auto;
+}
+
+.circles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.circles li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+  
+}
+
+.circles li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
   }
 
-  body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #E6E6FA;
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
   }
 
-  .option {
-    border: 2px solid #660033;
-    border-radius: 10px;
-    margin: 0 2rem;
-    padding: 2rem;
-    background-color: #FFFFFF;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+
+/*responsive*/
+
+@media (max-width: 991px){
+  .head-anim {
+    padding: 30px 20px !important;
+}
+.h2 {
+  font-size: 15px !important;
+}
+}
+
+/* @media (max-width: 769px){
+
+} */
+
+@media (max-width: 650px){
+  .h1 {
+    font-size: 30px !important;
+  }
+  .head-anim {
+    padding: 52px 55px !important
+  }
+}
+
+/* @media (max-width: 575px){
+  
+} */
+
+/* @media (max-width: 491px){
+  
+} */
+
+@media (max-width: 320px){
+  .h1 {
+    font-size: 20px !important;
+  }
+  .head-anim {
+    padding: 25px 10px !important;
+  }
 }
