--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,20 @@
 /*colors*/
-.text-green{
-    color: #317B3D;
+.text-yellow{
+    color: yellow;
+}
+.text-purple{
+    color: #a415a7;
+}
+
+/*heading and fonts*/
+.h1 {
+    font-size: 40px;
+}
+.h2 {
+    font-size: 30px;
+}
+.font-bold {
+    font-weight: bolder;
 }
 
 /*sect padding*/
@@ -13,12 +27,10 @@
     padding: 15px 30px;
     border: 2px solid #470F48;
     border-radius: 4px;
-    font-size: 25px;
-    color: #000000;
+    color: white;
     transition-duration: 1000ms;
     transition-property: background;
 }
 .btn-purple:hover {
-    color: white;
     background-color: #470F48;
 }
